apps/secrets-proxy-infra/namespace-argocd-clusters.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-clusters
  labels:
    purpose: argocd-cluster-secrets
